test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_2.k
Base = 1

schema Data(Base):
    name: str
